ingress-rule/ingress-rule.yaml
apiVersion: v1
kind: Ingress
metadata:
  namespace: sock-shop
  name: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 74.220.26.21
    http:
      path:
        backend:
          service:
            name: sock-shop
            port:
              number: 80

---

apiVersion: v1
kind: Ingress
metadata:
  name: web-app-portfolio
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 74.220.26.21
    http:
      path:
        backend:
          service:
            name: web-app-portfolio
            port:
              number: 80
